--- a/app/requirements_nanoporeata.yml
+++ b/app/requirements_nanoporeata.yml
@@ -55,6 +55,7 @@ dependencies:
   - gettext=0.19.8.1
   - gfortran_impl_linux-64=11.2.0
   - graphite2=1.3.13
+  - grpc-cpp=1.51.1
   - gtfparse=1.2.1
   - gsl=2.7
   - gxx_impl_linux-64=11.2.0
