--- a/app/requirements_nanoporeata.yml
+++ b/app/requirements_nanoporeata.yml
@@ -238,6 +238,7 @@ dependencies:
   - r-generics=0.1.3
   - r-gert=1.5.0
   - r-ggplot2=3.3.6
+  - r-ggpubr=0.1.9
   - r-gh=1.3.1
   - r-gistr=0.9.0
   - r-gitcreds=0.1.2
